@@ -1,3 +1,7 @@
+2025-12-19  Saruman the White  <eker@eker10>
+
+	* tests/Misc/attributeConsistency.maude: added
+
 ==================================Maude164===========================================
 
 2025-07-11  Rubén Rubio  <rubenrub@ucm.es>
